--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </div>
 
             <div class="links">
-                <a target="_blank" href="#"><button>GitHub</button></a>
-                <a target="_blank" href="#"><button>Linkedin</button></a>
-                <a target="_blank" href="#"><button>Instagram</button></a>
-                <a target="_blank" href="#"><button>WhatsApp</button></a>
+                <a target="_blank" href="https://github.com/RyanVerissimo"><button>GitHub</button></a>
+                <a target="_blank" href="https://www.linkedin.com/in/ryanverissimo/"><button>Linkedin</button></a>
+                <a target="_blank" href="https://www.instagram.com/ryanveris/"><button>Instagram</button></a>
+                <a target="_blank" href="https://api.whatsapp.com/send?phone=5585997794006&text=Ol%C3%A1,%20Ryan%20Oliveira,%20tudo%20bem?"><button>WhatsApp</button></a>
                 <a target="_blank" href="#"><button>Facebook</button></a>
             </div>
         </div>
